Fix: Use z-index for correct overlapping elements

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -65,6 +65,8 @@
 	padding-bottom: 30px;
 	padding-right: 30px;
 	width: 250px;
+
+	z-index: 1; /* To properly overlap the places cards */
 }
 
 .amenities:hover .popover ul {
